starting stage two methods